--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
     margin: 0;
 }
 
-body{
+body *{
   box-sizing: border-box;
   font-family: 'Raleway', sans-serif;
 }
@@ -19,6 +19,24 @@ a:visited{
 p{
   font-size: 17px;
   font-weight: 300;
+  line-height: 27px;
+}
+
+.btn{
+  width: 200px;
+  height: 50px;
+  border: none;
+
+  font-family: 'Raleway';
+  font-size: 20px;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 300;
+
+  color: #ffffff;
+  -webkit-box-shadow: 0px 5px 10px 2px rgba(0,0,0,0.3);
+  -moz-box-shadow: 0px 5px 10px 2px rgba(0,0,0,0.3);
+  box-shadow: 0px 5px 10px 2px rgba(0,0,0,0.3);
 }
 
 /*---NAVIGATION---*/
@@ -77,12 +95,25 @@ p{
 .head .title{
   font-size: 60px;
   font-weight: 900;
+  margin-bottom: 12px;
 }
 
 .head-content{
   position: relative;
   top: 155px;
   width: 50%;
+}
+
+.head .btn.get-free{
+  background: #ff6033;
+  margin-top: 32px;
+}
+
+.head .btn-scroll{
+  position: absolute;
+  bottom: 5%;
+  left: 50%;
+  transform: translateX(-50%);
 }
 /*--MAIN--*/
 .about{
