--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,10 @@ p {
   padding: 0;
 }
 
+.pull-right{
+  float: right;
+}
+
 .col-1-1 {
   width: 100%;
 }
@@ -85,6 +89,7 @@ p {
   margin-top: 50px;
   margin: 0 auto;
   max-width: 1200px;
+  z-index: 2;
 }
 
 .nav .nav-list {
@@ -113,7 +118,6 @@ p {
 
 /*---HEADER---*/
 .head {
-  padding-top: 147px;
   background: #ffffff;
   background: url("./img/strawberry.png") no-repeat center;
   background-size: cover;
@@ -126,10 +130,16 @@ p {
   margin-bottom: 12px;
 }
 
-.head-content {
+.head .grid-container {
+  padding-top: 147px;
+  min-height: 100vh;
   position: relative;
-  top: 155px;
-  width: 50%;
+}
+
+.head .content{
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 .head .btn.get-free {
