--- a/styles.css
+++ b/styles.css
@@ -158,13 +158,17 @@ p {
 }
 .about .grid-container{
   min-height: 700px;
+  padding: 0;
+}
+.about .header,
+.about .text{
+  margin-left: 40px;
 }
 .about .header,
 .services .header{
   color: #ffffff;
   font-size: 90px;
-  line-height: 27px;
-  margin-bottom: 40px;
+  margin-bottom: 30px;
 }
 .about .text{
   color: #ffffff;
@@ -173,8 +177,8 @@ p {
 .about .text:first-of-type{
   margin-bottom: 10px;
 }
-.about img,
-.services .header + img{
+.about img
+{
   width: 100%;
 }
 
@@ -192,6 +196,7 @@ p {
     transform: translateY(-50%);
     width: 100%;
 }
+
 .services-list{
   list-style: none;
 }
@@ -199,14 +204,27 @@ p {
 .service-item{
   max-width: 400px;
   height: 100px;
+  margin-bottom: 22px;
+  font-size: 20px;
   background: #ffffff;
   color: #000000;
-  margin-bottom: 22px;
+  -webkit-box-shadow: 7px 7px 10px 1px rgba(0,0,0,0.5);
+  -moz-box-shadow: 7px 7px 10px 1px rgba(0,0,0,0.5);
+  box-shadow: 7px 7px 10px 1px rgba(0,0,0,0.5);
+}
+
+.service-item:hover{
+  color: #ff6033;
 }
 
 .service-item .category{
   width: 75%;
   float: left;
+  text-align: center;
+}
+
+.category strong{
+  width: 100%;
 }
 
 .category strong,
@@ -228,10 +246,25 @@ p {
   height: 100px;
   position: relative;
 }
-
+/*GALLERY*/
 .gallery {
   background: #ffe92f;
   min-height: 1536px;
+}
+.gallery .header{
+  text-align: center;
+  font-size: 90px;
+  margin-top: 100px;
+  margin-bottom: 30px;
+}
+.gallery .grid-container{
+  display: block;
+}
+.gallery .text{
+  text-align: center;
+}
+.pictures-gallery{
+  display: flex;
 }
 
 
