--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-*,
+body *,
 *:after,
 *:before {
     padding: 0;
@@ -51,7 +51,8 @@ p {
   align-items: center;
   max-width: 1200px;
   margin: 0 auto;
-  padding: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 .grid-container.reversed{
@@ -83,7 +84,8 @@ p {
   left: 0;
   right: 0;
   height: 147px;
-  padding: 20px;
+  padding: 20px 0;
+
   margin-top: 50px;
   margin: 0 auto;
   max-width: 1200px;
@@ -97,7 +99,9 @@ p {
   color: #000000;
   margin-top: 20px;
 }
-
+.nav .nav-list .nav-list-item:last-child{
+  margin-right: 0;
+}
 .nav .nav-list .nav-list-item {
   display: inline;
   text-transform: uppercase;
@@ -152,6 +156,7 @@ p {
   transform: translateX(-50%);
 }
 /*--MAIN--*/
+/*ABOUT*/
 .about {
   background: #00b2b2;
   min-height: 700px;
@@ -182,7 +187,7 @@ p {
   width: 100%;
 }
 
-
+/*SERVICES*/
 .services {
   background: #70bfff;
   min-height: 790px;
@@ -250,6 +255,7 @@ p {
 .gallery {
   background: #ffe92f;
   min-height: 1536px;
+  position: relative;
 }
 .gallery .header{
   text-align: center;
@@ -262,12 +268,46 @@ p {
 }
 .gallery .text{
   text-align: center;
+  max-width: 600px;
+  margin: auto;
+  margin-bottom: 50px;
 }
-.pictures-gallery{
+.gallery-row{
   display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 30px;
 }
 
+.gallery-col{
+  display: flex;
+  padding-right: 30px;
+}
+.gallery-col img{
+  width: 50%;
+}
+.gallery-col.main{
+  width: 70%;
+  padding-right: 30px;
+}
+.gallery-col.main img,
+.gallery-col.side img{
+  width: 100%;
+}
+.gallery-col.side{
+  width: 30%;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  padding-right: 0;
+}
 
+.gallery .view-more{
+  position: absolute;
+  bottom: 5%;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #5585a2;
+}
 .subscribe {
   background: #ffffff;
   background: url("./img/subscribe-background.png") no-repeat;
