--- a/styles.css
+++ b/styles.css
@@ -30,9 +30,11 @@ p {
 }
 
 input[type="mail"],
-input[type="text"]{
+input[type="text"],
+input[type="tel"] {
   height: 54px;
   border: 1px solid #262626;
+  outline: none;  
 }
 
 .btn {
@@ -369,7 +371,8 @@ input[type="text"]{
   min-height: 866px;
 }
 
-.blog .grid-container{
+.blog .grid-container,
+.contact .grid-container{
   display: block;
 }
 
@@ -379,7 +382,8 @@ input[type="text"]{
   color: #ffffff;
 }
 
-.blog .header{
+.blog .header,
+.contact .header{
   font-size: 90px;
   margin-top: 80px;
 }
@@ -467,7 +471,7 @@ input[type="text"]{
   background-color: #f72b3b;
   position: absolute;
   left: 50%;
-  bottom: 120px;
+  bottom: 80px;
   transform: translateX(-50%);
 }
 .contact {
@@ -476,8 +480,106 @@ input[type="text"]{
   background-size: cover;
   min-height: 866px;
 }
+
+.contact .text{
+  margin: auto;
+  max-width: 385px;
+}
+
+
+.contact .header,
+.contact .text{
+  text-align: center;
+  color: #000000;
+  margin-bottom: 20px;
+}
+
+
+.contact-form input,
+.contact-form textarea{
+  background-color: #00c4c4;
+  background-color: rgba(0, 196, 196, 0.5);
+  
+  border: none;
+  color: #ffffff;
+  padding: 0 15px;
+  height: 50px;
+  width: 100%;
+  max-width: 500px;
+  margin-bottom: 15px;
+  display: block;
+  outline: none;
+}
+
+.contact-form input:focus,
+.contact-form textarea:focus {
+  border-left: 5px solid #355b82;
+  padding-left: 10px;
+  background-color: rgba(0, 196, 196, 1);
+}
+
+.contact-form textarea{
+  height: 250px;
+  padding: 15px;
+  resize: none;
+  overflow: auto;
+}
+
+.contact .contact-form label { 
+  visibility: hidden;
+  display:none;
+}
+.contact-info{
+  padding: 0 85px;
+}
+.contact-info p{
+
+  font-size: 17px;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.contact-info a,
+.contact-info .company-address{
+  font-size: 20px;
+  font-weight: 400;
+  text-transform: none;
+  text-decoration: none;
+  margin-bottom: 20px;
+  display: block;
+}
+
+.contact ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+  color: #ffffff;
+}
+.contact ::-moz-placeholder { /* Firefox 19+ */
+  color: #ffffff;
+}
+.contact  :-ms-input-placeholder { /* IE 10+ */
+  color: #ffffff;
+}
+.contact  :-moz-placeholder { /* Firefox 18- */
+  color: #ffffff;
+}
+
+
+.grid-row {
+   display: flex;
+   margin-top: 50px;
+}
 /*--FOOTER--*/
 .footer {
   background: #262626;
   min-height: 90px;
+  color: #747474;
+  font-size: 15px;
+}
+
+.footer .grid-container{
+  justify-content: space-between;
+  min-height: 90px;
+}
+
+.footer span{
+  color: #f12b55;
 }
