--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,7 @@ input[type="tel"] {
   width: 200px;
   height: 50px;
   border: none;
+  cursor: pointer;
 
   font-family: 'Raleway';
   font-size: 20px;
@@ -97,10 +98,10 @@ input[type="tel"] {
   right: 0;
   padding: 20px 0;
   z-index: 3;
-      -webkit-transition: background 1s, padding 1s;
-    -moz-transition: background 1s, padding 1s;
-    -o-transition: background 1s, padding 1s;
-    transition: background 1s, padding 1s;
+      -webkit-transition: background-color 1s, padding 1s;
+    -moz-transition: background-color 1s, padding 1s;
+    -o-transition: background-color 1s, padding 1s;
+    transition: background-color 1s, padding 1s;
 }
 
 .nav-content{
